--- a/auth_config.json
+++ b/auth_config.json
@@ -1,3 +1,3 @@
 {
-  "serverUrl": "https://clan.moraza.one/.netlify/functions/index"
+  "serverUrl": "https://teamkanyawa.teamkanyawa.com/.netlify/functions/index"
 }
